# humanize

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
scripts/: benchmark_rust.py
src/humanize/: __init__.py  filesize.py  i18n.py  lists.py  number.py  time.py
src/humanize/_fast/: Cargo.toml
src/humanize/_fast/benches/: bench_intcomma.rs
src/humanize/_fast/src/: filesize.rs  format_utils.rs  lib.rs  number.rs
tests/: conftest.py  test_benchmark.py  test_filesize.py  test_number.py
